Fixed forum styling on small screens

--- a/app/assets/stylesheets/landing/provider_show.scss
+++ b/app/assets/stylesheets/landing/provider_show.scss
@@ -38,7 +38,7 @@
 
 @media (max-width: $screen-sm) {
   .slide-provider-explanation {
-    .centered {
+    .center {
       text-align: left;
     }
   }
